--- a/main/css/recents.css
+++ b/main/css/recents.css
@@ -1,6 +1,4 @@
-html {
-    font-size: 62.5%;
-  }
+
 
 body {
     font-family: "PT Sans", sans-serif;
@@ -23,7 +21,7 @@ body {
     padding-top: 20px;
   }
   
-  #usersfeedbar {
+  #recents {
     border-top: 3px solid white;
   }
 
