css stuff - error messages

--- a/main/css/sign-in.css
+++ b/main/css/sign-in.css
@@ -29,6 +29,8 @@ h2 {
     position: relative;
     width: 30%;
     height: 30px;
+    padding: 20px;
+
 }
 
 .signin-fieldset input:focus {
@@ -39,8 +41,8 @@ h2 {
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    padding: 1em;
-    padding-top: 1em;
+    /* padding: 1em;
+    padding-top: 1em; */
 }
 
 input[type=submit] {
@@ -73,20 +75,4 @@ input[type=submit] {
 .forgot-message a, .signup-message a{
     color: #505260;
     text-decoration: underline;
-}
-
-#signin-form input.error{
-    background: #f8dbdb;
-    border-color: #e77776;
-}
-
-#signin-form span.error{
-    color: #e46c6e;
-}
-
-#signin-form span{
-    margin-left: 50px;
-    color: #b1b1b1;
-    font-size: 11px;
-    font-style: italic;
 }
